--- a/index.html
+++ b/index.html
@@ -549,10 +549,11 @@
             Built by <a href="#" class="footer_link">CamzJJ</a>. Designed by
             <a href="#" class="footer_link">Jonas schmedtmann</a> as part of his
             online ADVANCED CSS AND SASS course. Copyright &copy; by Jonas
-            Schmedtmann. You are 100% allowed to use this webpage for both
+            Schmedtmann. 
+            <!-- You are 100% allowed to use this webpage for both
             commercial and personal use, but NOT allowed to claim it as your own
             design. A credit to the original author, Jonas Schmedtmann, is of
-            course highly appreciated!
+            course highly appreciated! -->
           </p>
         </div>
       </div>
