--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                 <!-- card text -->
                 <h4 class="card__heading">
                   <span class="card__heading-span card__heading-span--2"
-                    >the sea explorer</span
+                    >the forest hiker</span
                   >
                 </h4>
                 <div class="card__details">
@@ -295,7 +295,7 @@
                 <!-- card text -->
                 <h4 class="card__heading">
                   <span class="card__heading-span card__heading-span--3"
-                    >the sea explorer</span
+                    >the snow adventurer</span
                   >
                 </h4>
                 <div class="card__details">
